force-app/main/default/objects/Funding_Account__c/Funding_Account__c.object-meta.xml
<CustomObject>
    <label>Funding Account</label>
    <nameField>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>