force-app/main/default/objects/Funding_Account__c/fields/Access_Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Access_Validation_Rule__c</fullName>
    <label>Access Validation Rule</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No restrictions apply</fullName>
                <color>#33CC00</color>
                <default>true</default>
                <label>No restrictions apply</label>
            </value>
            <value>
                <fullName>Geo-location restrictions apply</fullName>
                <color>#FFCC33</color>
                <label>Geo-location restrictions apply</label>
            </value>
            <value>
                <fullName>Payment instrument restrictions apply</fullName>
                <color>#FFCC33</color>
                <label>Payment instrument restrictions apply</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>