force-app/main/default/objects/Funding_Account__c/fields/Account_creation_date__c.field-meta.xml
<CustomField>
    <fullName>Account_creation_date__c</fullName>
    <label>Account creation date</label>
    <type>DateTime</type>
</CustomField>