force-app/main/default/objects/Funding_Account__c/fields/Account_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Profile__c</fullName>
    <label>Account Profile</label>
    <length>30</length>
    <type>Text</type>
</CustomField>