force-app/main/default/objects/Funding_Account__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <description>This value only can be edited if manual distribution of credit is setup at membership level</description>
    <inlineHelpText>This value only can be edited if manual distribution of credit is setup at membership level</inlineHelpText>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>