force-app/main/default/objects/Funding_Account__c/fields/Credit_Limit_Distribution_Mode__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Distribution_Mode__c</fullName>
    <description>Calculated based on Membership Line of Credit Configuration</description>
    <inlineHelpText>Calculated based on Membership Line of Credit Configuration</inlineHelpText>
    <label>Credit Limit Distribution Mode</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Limit_Validation_Rule__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evenly distributed across all funding accounts</fullName>
            </value>
            <value>
                <fullName>Manual distribution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>