force-app/main/default/objects/Funding_Account__c/fields/Credit_Limit_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Type__c</fullName>
    <label>Credit Limit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard</fullName>
                <default>true</default>
                <label>Hard</label>
            </value>
            <value>
                <fullName>Soft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>