force-app/main/default/objects/Funding_Account__c/fields/Job_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Job_Prompt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Job number is required during transaction</description>
    <inlineHelpText>Job number is required during transaction</inlineHelpText>
    <label>Job Prompt</label>
    <type>Checkbox</type>
</CustomField>