force-app/main/default/objects/Funding_Account__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Funding Accounts</relationshipLabel>
    <relationshipName>Funding_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>