force-app/main/default/objects/Funding_Account__c/fields/Requested_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Requested_Credit_Limit__c</fullName>
    <label>Requested Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>