force-app/main/default/objects/Funding_Account__c/fields/Screen_Flow_Actions__c.field-meta.xml
<CustomField>
    <fullName>Screen_Flow_Actions__c</fullName>
    <label>Screen Flow Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manage Funding Account</fullName>
                <label>Manage</label>
            </value>
            <value>
                <fullName>Show Funding Account Balance</fullName>
                <label>Balance</label>
            </value>
            <value>
                <fullName>Show Funding Account Statements</fullName>
                <label>Statements</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>